fixed bug with chatCopm

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     default-src 'self'; 
     script-src 'self';
     connect-src 'self' https://chatify-api.up.railway.app https://ajax.googleapis.com https://api.imgbb.com/1/upload;
-    img-src 'self' https://louise-eriksson.imgbb.com/ https://i.ibb.co https://img.daisyui.com; 
+    img-src 'self' data: https://louise-eriksson.imgbb.com/ https://i.ibb.co https://img.daisyui.com; 
     style-src 'unsafe-inline' 'self' https://fonts.googleapis.com;"
     >
   </head>
